# ug

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  stub.py
.github/workflows/: rust-ci.yml
py-examples/: dotprod.py  lang.py  ptx_add.py  softmax.py
py_src/ug/: __init__.py  __init__.pyi
py_src/ug/lang/: __init__.py  __init__.pyi
py_src/ug/op/: __init__.py  __init__.pyi
py_src/ug/ssa/: __init__.py  __init__.pyi
ug-core/: Cargo.toml
ug-core/examples/: dot_prod.rs  llama.rs
ug-core/examples/llama/: custom.rs  main.rs  model.rs
ug-core/src/: block.rs  cache.rs  common_tests.rs  const.rs  cpu.rs  cpu_code_gen.rs  cpu_runtime.rs  dtype.rs  error.rs  interpreter.rs  lang.rs  layout.rs  lazy_buffer.rs  lib.rs  lower.rs  lower_op.rs  safetensors.rs  samples.rs  schedule.rs  utils.rs
ug-core/tests/: basic_tests.rs  cpu_tests.rs  display_tests.rs  lb_tests.rs
ug-cuda/: Cargo.toml
ug-cuda/examples/: benchmark.rs  benchmark_softmax.rs  cuda_gen.rs
ug-cuda/src/: code_gen.rs  gemm.rs  lib.rs  reduce.cu  runtime.rs
ug-cuda/tests/: lb_tests.rs
ug-llama/: Cargo.toml
ug-llama/src/: cat.cu  cat.metal  cpu_ops.rs  cuda_ops.rs  main.rs  metal_ops.rs  model.rs  rope.cu  rope.metal  ropei.cu  ropei.metal  softmax.cu  softmax.metal
ug-metal/: Cargo.toml
ug-metal/examples/: metal_bench.rs
ug-metal/src/: code_gen.rs  lib.rs  runtime.rs  utils.rs
ug-metal/tests/: lb_tests.rs
ug-pyo3/: Cargo.toml
ug-pyo3/src/: lib.rs
