[workspace]
members = [
    "ug-core",
    "ug-cuda",
    "ug-pyo3",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "Micro compiler for tensor operations."
repository = "https://github.com/LaurentMazare/ug"
keywords = ["tensor", "machine-learning", "cuda"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
cudarc = { version = "0.12.1", features = ["f16", "cuda-version-from-build-system"] }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
ug = { path = "./ug-core", version = "0.0.1" }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
