[workspace]
members = [
  "ug-core",
  "ug-cuda",
  "ug-llama",
  "ug-metal",
  "ug-pyo3",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
description = "Micro compiler for tensor operations."
repository = "https://github.com/LaurentMazare/ug"
keywords = ["tensor", "machine-learning", "cuda"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
cudarc = { version = "0.13.5", features = ["f16", "cuda-version-from-build-system"] }
gemm = { version = "0.18.0", features = ["wasm-simd128-enable"] }
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
hf-hub = "0.3.2"
libloading = "0.8.5"
memmap2 = { version = "0.9.5", features = ["stable_deref_trait"] }
metal = "0.29.0"
num = "0.4.3"
num-traits = "0.2.19"
num_cpus = "1.16.0"
objc = "0.2.7"
ug = { path = "./ug-core", version = "0.1.1" }
ug-cuda = { path = "./ug-cuda", version = "0.1.1" }
ug-metal = { path = "./ug-metal", version = "0.1.1" }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
safetensors = "0.4.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1"
tokenizers = "0.20.3"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
yoke = { version = "0.7.4", features = ["derive"] }

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
