[package]
name = "ug"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
half = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
