[package]
name = "ug"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
gemm = { workspace = true }
half = { workspace = true }
libloading = { workspace = true }
memmap2 = { workspace = true }
num = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
yoke = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
hf-hub = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
