[package]
name = "ug-llama"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
cudarc = { workspace = true, optional = true }
hf-hub = { workspace = true }
metal = { workspace = true, optional = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
ug = { workspace = true }
ug-cuda = { workspace = true, optional = true }
ug-metal = { workspace = true, optional = true }

[features]
default = []
cuda = ["cudarc", "ug-cuda"]
metal = ["dep:metal", "ug-metal"]
