[package]
name = "ug-pyo3"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
name = "ug"
crate-type = ["cdylib"]

[dependencies]
ug = { workspace = true }
ug-cuda = { workspace = true }
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py38"] }
serde = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.22"
